# formulang

./: .gitignore  Cargo.toml
crates/formulang-cli/: Cargo.toml
crates/formulang-cli/src/: main.rs
crates/formulang-lang/: Cargo.toml  package-lock.json
crates/formulang-lang/src/: ast.rs  compiler.rs  lexer.rs  lib.rs  parser.rs  wasm.rs
crates/formulang-solver/: Cargo.toml
crates/formulang-solver/src/: lib.rs  problem.rs  simplex.rs  solution.rs
docs/spec/: 01-introduction.md  02-lexical-structure.md  03-declarations.md  04-expressions.md  05-constraints.md  06-imports.md  07-composition.md  08-examples.md  README.md
docs/spec/examples/: complete.fm  formulas.fm  ingredients.fm  nutrients.fm
