[package]
name = "formulang-cli"
description = "CLI for the Formulang DSL"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
formulang-lang = { workspace = true, features = ["serde"] }
formulang-solver.workspace = true
clap = { version = "4", features = ["derive"] }
serde_json.workspace = true

[[bin]]
name = "formulang"
path = "src/main.rs"
