[package]
name = "formulang-lang"
description = "Lexer, parser, and AST for the Formulang DSL"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror.workspace = true
serde = { workspace = true, optional = true }
formulang-solver.workspace = true
wasm-bindgen = { workspace = true, optional = true }
js-sys = { workspace = true, optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }

[features]
default = []
serde = ["dep:serde", "formulang-solver/serde"]
wasm = ["serde", "dep:wasm-bindgen", "dep:js-sys", "dep:serde-wasm-bindgen"]

[lib]
crate-type = ["cdylib", "rlib"]
