[package]
name = "formulang-solver"
description = "LP solver with sensitivity analysis for feed formulation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror.workspace = true
serde = { workspace = true, optional = true }

[features]
default = []
serde = ["dep:serde"]
